--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
     <footer>
         &copy;Yeah
     </footer>
+    <script type="module" src="./scripts/index.js"></script>
+</body>
 </body>
 </html>
