--- a/canada.html
+++ b/canada.html
@@ -5,34 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/template.css">
+    <link rel="stylesheet" href="styles/canada.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="header-container">
             <img src="images/travel-logo.png" alt="logo">
             <ul>
-                <li><a href="">Australia</a></li>
-                <li><a href="">Canada</a></li>
-                <li><a href="">Norway</a></li>
-                <li><a href="">Poland</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="australia.html">Australia</a></li>
+                <li><a href="canada.html">Canada</a></li>
+                <li><a href="norway.html">Norway</a></li>
+                <li><a href="poland.html">Poland</a></li>
             </ul>
         </div>
     </header>
     <main>
         <div class="main-image-container">
-            <img src="images/canada-country-img.jpg" alt="country" class="country-image">
+            <img src="images/canada.jpg" alt="country" class="country-image">
             <a href="">Link to Google Maps</a>
         </div>
         <div class="info-container">
             <div class="image-container">
-                <img src="images\placeholder.png" alt="landmark">
+                <img src="images/niagara-falls.jpg" alt="landmark">
             </div>
             <div class="image-container">
-                <img src="images\placeholder.png" alt="city">
+                <img src="images/toronto.jpg" alt="city">
             </div>
             <div class="image-container">
-                <img src="images\placeholder.png" alt="celebrity">
+                <img src="images/ryan.jpg" alt="celebrity">
             </div>
             <!--images above respective info section-->
             <section class="landmark-info">
