created CSS for index.html

--- a/australia.html
+++ b/australia.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="images/travel-logo.png" alt="logo">
+            <img src="images\placeholder.png" alt="logo">
             <ul>
-                <li><a href="" class="menu">Australia</a></li>
-                <li><a href="" class="active">Canada</a></li>
+                <li><a href=""class="active">Australia</a></li>
+                <li><a href="" class="menu">Canada</a></li>
                 <li><a href="" class="menu">Norway</a></li>
                 <li><a href="" class="menu">Poland</a></li>
             </ul>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class="main-image-container">
-            <img src="images/canada-country-img.jpg" alt="country" class="country-image">
+            <img src="images\placeholder.png" alt="country" class="country-image">
             <a href="">Link to Google Maps</a>
         </div>
         <div class="info-container">
@@ -49,6 +49,6 @@
     <footer>
         <p>Sassy Seeds &copy; 2021</p>
     </footer>
-    <script type="module" src="./scripts/canada/main.js"></script>
+    <script type="module" src="./scripts/australia/main.js"></script>
 </body>
 </html>
