--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <title>Travel Site</title>
 </head>
 
 <body>
     <nav>
-        <img src="./images/logo.png" alt="TravelCompany" class="logo_img">
+        <img src="./images/travel-logo.png" alt="TravelCompany" class="logo_img">
         <div id="myLinks">
-            <a href="#Poland" class="active">Poland</a>
-            <a href="#Austailia">Austrailia</a>
-            <a href="#Canada">Canada</a>
-            <a href="#Norway">Norway</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="poland.html" class="menu">Poland</a>
+            <a href="australia.html" class="menu">Australia</a>
+            <a href="canada.html" class="menu">Canada</a>
+            <a href="norway.html" class="menu">Norway</a>
           </div>
 
     </nav>
@@ -29,7 +32,7 @@
         
     </div>
     <footer>
-        &copy;Yeah
+        <p>&copy;All rights reserved</p>
     </footer>
     <script type="module" src="./scripts/index.js"></script>
 </body>
