final product, css touch ups.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <img src="images/home_image.png" alt="Travel is fun!" class="homeImage">
 
     </div>
+    <h1>Lets Get Swifty And Travel The World You Crazy Kids</h1>
     <div class="home_country__container">
         
     </div>
